fixed text alignment on project title container

--- a/src/App.css
+++ b/src/App.css
@@ -566,9 +566,7 @@ canvas {
 }
 
 #projects-title-text {
-  position: relative;
   text-align: center;
-  top: 20px;
 }
 
 #projects-title-text h2 {
@@ -578,9 +576,11 @@ canvas {
 
 .project-title-container {
   width: 100%;
+  height: 80px;
   color: black;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .project-title-container-two {
@@ -600,26 +600,24 @@ canvas {
 
 .project-title-left-polygon {
   -webkit-clip-path: polygon(100% 0, 95% 30%, 0 30%, 0 0%);
-  clip-path: polygon(100% 0, 95% 30%, 0 30%, 0 0%);
+  clip-path: polygon(100% 0, 95% 100%, 0 100%, 0 0%);
   background-color: #5d5973;
   width: 43vw;
-  height: 30vh;
+  height: 80px;
   left: 0;
 }
 
 .project-title-text {
-  height: 100%;
-  margin-top: 13px;
   font-size: 15px;
   font-weight: 300px;
 }
 
 .project-title-right-polygon {
   -webkit-clip-path: polygon(100% 0%, 100% 30%, 5% 30%, 0 0);
-  clip-path: polygon(100% 0%, 100% 30%, 5% 30%, 0 0);
+  clip-path: polygon(100% 0%, 100% 100%, 5% 100%, 0 0);
   background-color: #5d5973;
   width: 43vw;
-  height: 30vh;
+  height: 80px;
   left: 0;
 }
 .project-page-image-container {
